Fixed overlapping Experience tag, changed section to be a block instead of inline-block

--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ a:hover#projects,
 a:hover#experience {
   text-decoration: none;
   color: #293241;
-  margin-left: 5%;
+  margin-left: 1%;
 }
 
 /*********************************************************************/
@@ -114,7 +114,6 @@ a:hover#experience {
 }
 
 .grid-item3 {
-  border: 5px solid;
   margin-top: 2vh;
   padding: 1em;
   height: 61%;
@@ -140,7 +139,7 @@ a:hover#experience {
 }
 
 .fade-in-text {
-  display: inline-block;
+  display: block;
   color: black;;
   animation: fadeIn linear 2.7s;
   -webkit-animation: fadeIn linear 2.7s;
